--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ fake==0.8
 Faker==37.4.0
 iniconfig==2.1.0
 invoke==2.2.0
+mimesis
 numpy==2.3.0
 openpyxl==3.1.5
 packaging==25.0
@@ -25,3 +26,4 @@ pytz==2025.2
 six==1.17.0
 tzdata==2025.2
 wrapt==1.17.2
+python-dotenv==1.1.1
